--- a/app/src/main/res/layout/fragment_outcome.xml
+++ b/app/src/main/res/layout/fragment_outcome.xml
@@ -16,16 +16,17 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@mipmap/ic_qita_fs"/>
+
         <TextView
             android:id="@+id/frag_record_tv_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="其他"
-            android:layout_toRightOf="@id/frag_record_iv"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/frag_record_iv"
+            android:text="Other"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"/>
+            android:textStyle="bold" />
         <EditText
             android:id="@+id/frag_record_et_money"
             android:layout_width="wrap_content"
