--- a/app/src/main/res/layout/dialog_more.xml
+++ b/app/src/main/res/layout/dialog_more.xml
@@ -16,11 +16,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:text="@string/setting"/>
-        <Button
-            android:id="@+id/dialog_more_btn_record"
-            style="@style/dialogmoreStyle"
-            android:drawableTop="@mipmap/it_jilu"
-            android:text="@string/history_record"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,16 +28,24 @@
         <Button
             android:id="@+id/dialog_more_btn_info"
             style="@style/dialogmoreStyle"
-            android:layout_width="105dp"
+            android:layout_width="190dp"
             android:layout_marginRight="30dp"
             android:drawableTop="@mipmap/it_xiqing"
             android:text="@string/account_info" />
+
+        <Button
+            android:id="@+id/dialog_more_btn_record"
+            style="@style/dialogmoreStyle"
+            android:layout_width="190dp"
+            android:drawableTop="@mipmap/it_jilu"
+            android:text="@string/history_record" />
     </LinearLayout>
+
     <ImageView
         android:id="@+id/dialog_more_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ih_error"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:src="@mipmap/ih_error" />
 </LinearLayout>
