--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,15 +40,18 @@
         android:id="@+id/main_btn_more"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/more"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:background="@drawable/main_morebtn_bg"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/main_morebtn_bg"
+        android:src="@mipmap/more" />
 
     <Button
         android:id="@+id/main_btn_edit"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_alignBottom="@id/main_btn_more"
         android:background="@drawable/main_recordbtn_bg"
