--- a/app/src/main/res/layout/fragment_outcome.xml
+++ b/app/src/main/res/layout/fragment_outcome.xml
@@ -73,14 +73,14 @@
             android:id="@+id/frag_record_tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2020年10月30日 18:49"
+            android:text="2020/10/30 18:49"
             android:layout_alignParentRight="true"
             android:padding="10dp"/>
         <TextView
             android:id="@+id/frag_record_tv_beizhu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="添加备注"
+            android:text="Add Remark"
             android:layout_toLeftOf="@id/frag_record_tv_time"
             android:padding="10dp"/>
     </RelativeLayout>
