--- a/app/src/main/res/layout/activity_month_chart.xml
+++ b/app/src/main/res/layout/activity_month_chart.xml
@@ -42,7 +42,7 @@
             android:id="@+id/chart_tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2020/11 Records"
+            android:text="2023.4 Records"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -50,7 +50,7 @@
             android:id="@+id/chart_tv_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="共1笔支出, ￥23.0"
+            android:text="One payment total, $23.0"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginTop="10dp"/>
@@ -58,7 +58,7 @@
             android:id="@+id/chart_tv_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="共2笔收入, ￥113.0"
+            android:text="Two payments total, $113.0"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginTop="10dp"/>
