--- a/app/src/main/res/layout/item_chartfrag_lv.xml
+++ b/app/src/main/res/layout/item_chartfrag_lv.xml
@@ -7,29 +7,32 @@
         android:id="@+id/item_chartfrag_iv"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@mipmap/ic_yanjiu_fs"/>
+        android:src="@mipmap/ic_canyin_fs"/>
     <TextView
         android:id="@+id/item_chartfrag_tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="烟酒茶"
+        android:text="Dining"
         android:textSize="16sp"
         android:layout_toRightOf="@id/item_chartfrag_iv"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:textStyle="bold"/>
+
     <TextView
         android:id="@+id/item_chartfrag_tv_pert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="22.3%"
         android:textSize="16sp"
-        android:layout_centerInParent="true"/>
+        android:layout_toRightOf="@id/item_chartfrag_tv_type"/>
     <TextView
         android:id="@+id/item_chartfrag_tv_sum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="￥123.3"
+        android:text="$23.3"
         android:textSize="16sp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"/>
