--- a/app/src/main/res/layout/dialog_budget.xml
+++ b/app/src/main/res/layout/dialog_budget.xml
@@ -22,7 +22,7 @@
         android:id="@+id/dialog_budget_tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="￥"
+        android:text="$"
         android:layout_below="@id/dialog_budget_tv1"
         android:textSize="20sp"
         android:layout_marginTop="10dp"/>
