--- a/app/src/main/res/layout/item_mainlv.xml
+++ b/app/src/main/res/layout/item_mainlv.xml
@@ -8,7 +8,7 @@
         android:id="@+id/item_mainlv_iv"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:src="@mipmap/ic_yanjiu_fs"/>
+        android:src="@mipmap/ic_canyin_fs"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,14 +19,14 @@
             android:id="@+id/item_mainlv_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="烟酒茶"
+            android:text="Dining"
             android:textStyle="bold"
             android:textSize="16sp"/>
         <TextView
             android:id="@+id/item_mainlv_tv_beizhu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="华子一盒"
+            android:text="McDonald's"
             android:layout_marginTop="5dp"
             android:textSize="12sp"/>
     </LinearLayout>
@@ -40,13 +40,13 @@
             android:id="@+id/item_mainlv_tv_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥25.0"
+            android:text="$55.0"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/item_mainlv_tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="今天 18:10"
+            android:text="Today 18:10"
             android:layout_marginTop="5dp" />
     </LinearLayout>
 </RelativeLayout>
