--- a/app/src/main/res/layout/item_mainlv_top.xml
+++ b/app/src/main/res/layout/item_mainlv_top.xml
@@ -17,7 +17,7 @@
             android:id="@+id/item_mainlv_top_tv_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥ 0"
+            android:text="$ 0"
             android:layout_below="@id/item_mainlv_top_tv1"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="￥ 0"
+            android:text="$ 0"
             android:layout_below="@id/item_mainlv_top_tv_out"
             android:layout_toRightOf="@id/item_mainlv_top_tv2"
             android:layout_marginLeft="5dp"/>
@@ -50,7 +50,7 @@
             android:id="@+id/item_mainlv_top_tv_budget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥ 0"
+            android:text="$ 0"
             android:textColor="@color/black"
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@id/item_mainlv_top_tv2"
@@ -78,8 +78,10 @@
         android:id="@+id/item_mainlv_top_tv_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="今日支出 ￥0 收入 ￥0"
+        android:text="Today: Outcome $0 Income $0"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 </LinearLayout>
