--- a/app/src/main/res/layout/item_recordfrag_gv.xml
+++ b/app/src/main/res/layout/item_recordfrag_gv.xml
@@ -7,12 +7,12 @@
         android:id="@+id/item_recordfrag_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_qita_fs"/>
+        android:src="@mipmap/ic_canyin_fs"/>
     <TextView
         android:id="@+id/item_recordfrag_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Other"
+        android:text="Dining"
         android:layout_marginTop="5dp"
         android:textSize="12sp"
         android:textColor="@color/grey_7D7D7D"
